Filter opened packages not available for current OS in JPS bootstrap.
GitOrigin-RevId: 1520b46d3758306ff511c5c26d1a6de4a3daaec1