@@ -5,6 +5,7 @@ package org.jetbrains.jpsBootstrap;
 import com.google.common.hash.Hashing;
 import com.intellij.execution.CommandLineWrapperUtil;
 import com.intellij.openapi.diagnostic.IdeaLogRecordFormatter;
+import com.intellij.openapi.util.SystemInfo;
 import com.intellij.openapi.util.text.Strings;
 import com.intellij.util.ExceptionUtil;
 import com.intellij.util.containers.ContainerUtil;
@@ -193,7 +194,40 @@ public class JpsBootstrapMain {
     writeJavaArgfile(moduleRuntimeClasspath);
   }
 
-  private void writeJavaArgfile(List<File> moduleRuntimeClasspath) throws IOException {
+  private void removeOpenedPackage(List<String> openedPackages, String openedPackage, List<String> unknownPackages) {
+    if (!openedPackages.remove(openedPackage)) {
+      unknownPackages.add(openedPackage);
+    }
+  }
+
+  private List<String> getOpenedPackages() throws Exception {
+    Path openedPackagesPath = communityHome.getCommunityRoot().resolve("plugins/devkit/devkit-core/src/run/OpenedPackages.txt");
+    List<String> openedPackages = ContainerUtil.filter(Files.readAllLines(openedPackagesPath), it -> !it.isBlank());
+    List<String> unknownPackages = new ArrayList<>();
+
+    if (!SystemInfo.isWindows) {
+      removeOpenedPackage(openedPackages,"--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED", unknownPackages);
+    }
+    if (!SystemInfo.isMac) {
+      removeOpenedPackage(openedPackages,"--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED", unknownPackages);
+      removeOpenedPackage(openedPackages,"--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED", unknownPackages);
+      removeOpenedPackage(openedPackages,"--add-opens=java.desktop/com.apple.laf=ALL-UNNAMED", unknownPackages);
+      removeOpenedPackage(openedPackages,"--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED", unknownPackages);
+    }
+    if (!SystemInfo.isLinux) {
+      removeOpenedPackage(openedPackages,"--add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED", unknownPackages);
+      removeOpenedPackage(openedPackages,"--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED", unknownPackages);
+      removeOpenedPackage(openedPackages,"--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED", unknownPackages);
+    }
+    if (!unknownPackages.isEmpty()) {
+      throw new Exception(String.format("OS specific opened packages: ['%s'] not found in '%s'. " +
+          "Probably you need to clean up OS-specific package names in org.jetbrains.jpsBootstrap.JpsBootstrapMain",
+        String.join("','", unknownPackages), openedPackagesPath));
+    }
+    return openedPackages;
+  }
+
+  private void writeJavaArgfile(List<File> moduleRuntimeClasspath) throws Exception {
     Properties systemProperties = new Properties();
 
     if (underTeamCity) {
@@ -209,9 +243,7 @@ public class JpsBootstrapMain {
     args.add("-ea");
     args.add("-Xmx" + buildTargetXmx);
 
-    Path openedPackagesPath = communityHome.getCommunityRoot().resolve("plugins/devkit/devkit-core/src/run/OpenedPackages.txt");
-    List<String> openedPackages = ContainerUtil.filter(Files.readAllLines(openedPackagesPath), it -> !it.isBlank());
-    args.addAll(openedPackages);
+    args.addAll(getOpenedPackages());
 
     args.addAll(convertPropertiesToCommandLineArgs(systemProperties));
 
